backend-lumne/k8s/infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lovable-main-ingress
  namespace: lovable-core
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx

  rules:
  - host: "*.buildwithlumen.net"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lovable-me-proxy
            port:
              number: 80
  - http:
      paths:

      # FRONTEND
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lovable-frontend
            port:
              number: 80

      # BACKEND API
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: api-gateway
            port:
              number: 80
